# cin-mood-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CineBot_Intent_Classification_Capstone.ipynb  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: schemas.py
backend/app/api/middleware/: auth.py  logging.py  rate_limit.py
backend/app/api/routes/: auth.py  chat.py  feedback.py  health.py
backend/app/core/: config.py  llm.py  logging.py  metrics.py  redis.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260423_0001_initial_schema.py
backend/app/db/repositories/: movie_repo.py  user_repo.py
backend/app/dialogue/: policy.py  response.py  state.py
backend/app/nlp/: embedder.py  entity_extractor.py  intent_classifier.py  pipeline.py  preprocessor.py
backend/app/recommender/: explainer.py  hybrid.py  ranker.py
backend/app/scripts/: _tmdb_client.py  build_embeddings.py  ingest_tmdb.py  train_intent.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/unit/: test_entity_extractor.py  test_ranker.py
docs/: ARCHITECTURE.md  EVALUATION.md  RUNBOOK.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatComposer.tsx  MessageList.tsx  RecommendationCard.tsx  Sidebar.tsx  Sprocket.tsx
frontend/src/hooks/: useChatSocket.ts
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/pages/: AuthPage.tsx  ChatPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: api.ts
infra/docker/: init-pgvector.sql
infra/grafana/dashboards/: cinebot-overview.json  dashboards.yml
infra/grafana/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
ml/data/: intents_sample.jsonl
scripts/: cinebot.postman_collection.json  locustfile.py
